{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 179,
  "lineage": "d2c05f7e-c9db-ce4c-7169-179be468793d",
  "resources": [
    {
      "module": "module.ec1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "foo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015b9ef68c77328d",
            "arn": "arn:aws:ec2:us-east-1:740121593245:instance/i-0fd78893ef2bda867",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd78893ef2bda867",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-036472242ac41ae6a",
            "private_dns": "ip-10-0-2-40.ec2.internal",
            "private_ip": "10.0.2.40",
            "public_ip": "52.90.212.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06a90924f5a66569e",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09f8d09f5373eba8d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049811302a02b3e99",
            "tags": {
              "Name": "praveen"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09f8d09f5373eba8d"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.traffic",
            "module.network.aws_subnet.local",
            "module.network.aws_vpc.local"
          ]
        }
      ]
    },
    {
      "module": "module.internet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740121593245:internet-gateway/igw-0e585d93820624679",
            "id": "igw-0e585d93820624679",
            "owner_id": "740121593245",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0f9e73cd6c9bff2d1"
          },
          "dependencies": [
            "module.network.aws_vpc.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routing",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0707ea1194de1350b",
            "owner_id": "740121593245",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e585d93820624679",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0f9e73cd6c9bff2d1"
          },
          "dependencies": [
            "module.internet.aws_internet_gateway.igw",
            "module.network.aws_vpc.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a49b1d13d544ceab",
            "route_table_id": "rtb-0707ea1194de1350b",
            "subnet_id": "subnet-049811302a02b3e99"
          },
          "dependencies": [
            "aws_route_table.routing",
            "module.internet.aws_internet_gateway.igw",
            "module.network.aws_subnet.local",
            "module.network.aws_vpc.local"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "traffic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740121593245:security-group/sg-09f8d09f5373eba8d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f8d09f5373eba8d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_http_traffic",
            "name_prefix": null,
            "owner_id": "740121593245",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0f9e73cd6c9bff2d1"
          },
          "dependencies": [
            "module.network.aws_vpc.local"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "local",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740121593245:subnet/subnet-049811302a02b3e99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-049811302a02b3e99",
            "map_public_ip_on_launch": true,
            "owner_id": "740121593245",
            "tags": {
              "Name": "Main"
            },
            "vpc_id": "vpc-0f9e73cd6c9bff2d1"
          },
          "dependencies": [
            "module.network.aws_vpc.local"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "local",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740121593245:vpc/vpc-0f9e73cd6c9bff2d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a038599d0f98451c",
            "default_route_table_id": "rtb-0d510e54b1c185181",
            "default_security_group_id": "sg-042c7a0e963e99b40",
            "dhcp_options_id": "dopt-0e15447acea01af94",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f9e73cd6c9bff2d1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d510e54b1c185181",
            "owner_id": "740121593245",
            "tags": {
              "Name": "local"
            }
          }
        }
      ]
    }
  ]
}